parser/symbolan_parser.go
// Code generated from Symbolan.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // Symbolan

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'()'", "'=>'", "'^'", "'**'", "'*'", "'/'", "'+'", "'-'", "'('", "')'",
	"'{'", "'}'", "'['", "']'", "'='", "','", "'!'", "'min'", "'max'", "'sin'",
	"'cos'", "'tan'", "'log'", "'sqrt'", "'D'", "'pi'", "", "", "", "", "",
	"'undef'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY",
	"L_BRACKET", "R_BRACKET", "ASSIGN", "COMMA", "FACTORIAL", "MIN", "MAX",
	"SIN", "COS", "TAN", "LOG", "SQRT", "DERIVATIVE_OPERATOR", "PI", "DERIVATIVE",
	"VAR", "CONST", "EULER", "INFINITE", "UNDEFINED", "DERIVATE_RULE", "NUMERIC_RULE",
	"CONST_RULE", "VAR_RULE", "EXPR_RULE", "IMAGINARY", "DECIMAL_LIT", "OCTAL_LIT",
	"HEX_LIT", "FLOAT_LIT", "IMAGINARY_LIT", "IDENTIFIER", "NEWLINE", "WS",
	"LINE_COMMENT",
}

var ruleNames = []string{
	"ruleSet", "eq", "system_functions", "rule_function", "expressionRule",
	"expr", "ruleAtom", "sign", "left_par", "right_par", "derivative_rule",
	"numeric_rule", "const_rule", "var_rule", "expr_rule", "atom", "math_constant",
	"infinite", "imaginary", "number", "derivative", "variable", "constant",
	"bi_operators",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SymbolanParser struct {
	*antlr.BaseParser
}

func NewSymbolanParser(input antlr.TokenStream) *SymbolanParser {
	this := new(SymbolanParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Symbolan.g4"

	return this
}

// SymbolanParser tokens.
const (
	SymbolanParserEOF                 = antlr.TokenEOF
	SymbolanParserT__0                = 1
	SymbolanParserT__1                = 2
	SymbolanParserT__2                = 3
	SymbolanParserT__3                = 4
	SymbolanParserT__4                = 5
	SymbolanParserT__5                = 6
	SymbolanParserT__6                = 7
	SymbolanParserT__7                = 8
	SymbolanParserL_PAREN             = 9
	SymbolanParserR_PAREN             = 10
	SymbolanParserL_CURLY             = 11
	SymbolanParserR_CURLY             = 12
	SymbolanParserL_BRACKET           = 13
	SymbolanParserR_BRACKET           = 14
	SymbolanParserASSIGN              = 15
	SymbolanParserCOMMA               = 16
	SymbolanParserFACTORIAL           = 17
	SymbolanParserMIN                 = 18
	SymbolanParserMAX                 = 19
	SymbolanParserSIN                 = 20
	SymbolanParserCOS                 = 21
	SymbolanParserTAN                 = 22
	SymbolanParserLOG                 = 23
	SymbolanParserSQRT                = 24
	SymbolanParserDERIVATIVE_OPERATOR = 25
	SymbolanParserPI                  = 26
	SymbolanParserDERIVATIVE          = 27
	SymbolanParserVAR                 = 28
	SymbolanParserCONST               = 29
	SymbolanParserEULER               = 30
	SymbolanParserINFINITE            = 31
	SymbolanParserUNDEFINED           = 32
	SymbolanParserDERIVATE_RULE       = 33
	SymbolanParserNUMERIC_RULE        = 34
	SymbolanParserCONST_RULE          = 35
	SymbolanParserVAR_RULE            = 36
	SymbolanParserEXPR_RULE           = 37
	SymbolanParserIMAGINARY           = 38
	SymbolanParserDECIMAL_LIT         = 39
	SymbolanParserOCTAL_LIT           = 40
	SymbolanParserHEX_LIT             = 41
	SymbolanParserFLOAT_LIT           = 42
	SymbolanParserIMAGINARY_LIT       = 43
	SymbolanParserIDENTIFIER          = 44
	SymbolanParserNEWLINE             = 45
	SymbolanParserWS                  = 46
	SymbolanParserLINE_COMMENT        = 47
)

// SymbolanParser rules.
const (
	SymbolanParserRULE_ruleSet          = 0
	SymbolanParserRULE_eq               = 1
	SymbolanParserRULE_system_functions = 2
	SymbolanParserRULE_rule_function    = 3
	SymbolanParserRULE_expressionRule   = 4
	SymbolanParserRULE_expr             = 5
	SymbolanParserRULE_ruleAtom         = 6
	SymbolanParserRULE_sign             = 7
	SymbolanParserRULE_left_par         = 8
	SymbolanParserRULE_right_par        = 9
	SymbolanParserRULE_derivative_rule  = 10
	SymbolanParserRULE_numeric_rule     = 11
	SymbolanParserRULE_const_rule       = 12
	SymbolanParserRULE_var_rule         = 13
	SymbolanParserRULE_expr_rule        = 14
	SymbolanParserRULE_atom             = 15
	SymbolanParserRULE_math_constant    = 16
	SymbolanParserRULE_infinite         = 17
	SymbolanParserRULE_imaginary        = 18
	SymbolanParserRULE_number           = 19
	SymbolanParserRULE_derivative       = 20
	SymbolanParserRULE_variable         = 21
	SymbolanParserRULE_constant         = 22
	SymbolanParserRULE_bi_operators     = 23
)

// IRuleSetContext is an interface to support dynamic dispatch.
type IRuleSetContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRuleSetContext differentiates from other interfaces.
	IsRuleSetContext()
}

type RuleSetContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleSetContext() *RuleSetContext {
	var p = new(RuleSetContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SymbolanParserRULE_ruleSet
	return p
}

func (*RuleSetContext) IsRuleSetContext() {}

func NewRuleSetContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleSetContext {
	var p = new(RuleSetContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SymbolanParserRULE_ruleSet

	return p
}

func (s *RuleSetContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleSetContext) AllExpressionRule() []IExpressionRuleContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpressionRuleContext)(nil)).Elem())
	var tst = make([]IExpressionRuleContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpressionRuleContext)
		}
	}

	return tst
}

func (s *RuleSetContext) ExpressionRule(i int) IExpressionRuleContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionRuleContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpressionRuleContext)
}

func (s *RuleSetContext) AllNEWLINE() []antlr.TerminalNode {
	return s.GetTokens(SymbolanParserNEWLINE)
}

func (s *RuleSetContext) NEWLINE(i int) antlr.TerminalNode {
	return s.GetToken(SymbolanParserNEWLINE, i)
}

func (s *RuleSetContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleSetContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleSetContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.EnterRuleSet(s)
	}
}

func (s *RuleSetContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.ExitRuleSet(s)
	}
}

func (p *SymbolanParser) RuleSet() (localctx IRuleSetContext) {
	localctx = NewRuleSetContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SymbolanParserRULE_ruleSet)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SymbolanParserT__6)|(1<<SymbolanParserT__7)|(1<<SymbolanParserL_PAREN)|(1<<SymbolanParserMIN)|(1<<SymbolanParserMAX)|(1<<SymbolanParserSIN)|(1<<SymbolanParserCOS)|(1<<SymbolanParserTAN)|(1<<SymbolanParserLOG)|(1<<SymbolanParserDERIVATIVE_OPERATOR)|(1<<SymbolanParserPI)|(1<<SymbolanParserDERIVATIVE)|(1<<SymbolanParserVAR)|(1<<SymbolanParserCONST)|(1<<SymbolanParserEULER)|(1<<SymbolanParserINFINITE))) != 0) || (((_la-32)&-(0x1f+1)) == 0 && ((1<<uint((_la-32)))&((1<<(SymbolanParserUNDEFINED-32))|(1<<(SymbolanParserDERIVATE_RULE-32))|(1<<(SymbolanParserNUMERIC_RULE-32))|(1<<(SymbolanParserCONST_RULE-32))|(1<<(SymbolanParserVAR_RULE-32))|(1<<(SymbolanParserEXPR_RULE-32))|(1<<(SymbolanParserDECIMAL_LIT-32))|(1<<(SymbolanParserOCTAL_LIT-32))|(1<<(SymbolanParserHEX_LIT-32))|(1<<(SymbolanParserFLOAT_LIT-32))|(1<<(SymbolanParserIMAGINARY_LIT-32)))) != 0) {
		{
			p.SetState(48)
			p.ExpressionRule()
		}
		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SymbolanParserNEWLINE {
			{
				p.SetState(49)
				p.Match(SymbolanParserNEWLINE)
			}

			p.SetState(54)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

		p.SetState(59)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IEqContext is an interface to support dynamic dispatch.
type IEqContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEqContext differentiates from other interfaces.
	IsEqContext()
}

type EqContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEqContext() *EqContext {
	var p = new(EqContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SymbolanParserRULE_eq
	return p
}

func (*EqContext) IsEqContext() {}

func NewEqContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EqContext {
	var p = new(EqContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SymbolanParserRULE_eq

	return p
}

func (s *EqContext) GetParser() antlr.Parser { return s.parser }

func (s *EqContext) AllExpr() []IExprContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExprContext)(nil)).Elem())
	var tst = make([]IExprContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExprContext)
		}
	}

	return tst
}

func (s *EqContext) Expr(i int) IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *EqContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EqContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EqContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.EnterEq(s)
	}
}

func (s *EqContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.ExitEq(s)
	}
}

func (p *SymbolanParser) Eq() (localctx IEqContext) {
	localctx = NewEqContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SymbolanParserRULE_eq)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(60)
			p.expr(0)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(61)
			p.expr(0)
		}
		{
			p.SetState(62)
			p.Match(SymbolanParserASSIGN)
		}
		{
			p.SetState(63)
			p.expr(0)
		}

	}

	return localctx
}

// ISystem_functionsContext is an interface to support dynamic dispatch.
type ISystem_functionsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSystem_functionsContext differentiates from other interfaces.
	IsSystem_functionsContext()
}

type System_functionsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySystem_functionsContext() *System_functionsContext {
	var p = new(System_functionsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SymbolanParserRULE_system_functions
	return p
}

func (*System_functionsContext) IsSystem_functionsContext() {}

func NewSystem_functionsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *System_functionsContext {
	var p = new(System_functionsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SymbolanParserRULE_system_functions

	return p
}

func (s *System_functionsContext) GetParser() antlr.Parser { return s.parser }

func (s *System_functionsContext) MIN() antlr.TerminalNode {
	return s.GetToken(SymbolanParserMIN, 0)
}

func (s *System_functionsContext) MAX() antlr.TerminalNode {
	return s.GetToken(SymbolanParserMAX, 0)
}

func (s *System_functionsContext) SIN() antlr.TerminalNode {
	return s.GetToken(SymbolanParserSIN, 0)
}

func (s *System_functionsContext) COS() antlr.TerminalNode {
	return s.GetToken(SymbolanParserCOS, 0)
}

func (s *System_functionsContext) TAN() antlr.TerminalNode {
	return s.GetToken(SymbolanParserTAN, 0)
}

func (s *System_functionsContext) LOG() antlr.TerminalNode {
	return s.GetToken(SymbolanParserLOG, 0)
}

func (s *System_functionsContext) DERIVATIVE_OPERATOR() antlr.TerminalNode {
	return s.GetToken(SymbolanParserDERIVATIVE_OPERATOR, 0)
}

func (s *System_functionsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *System_functionsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *System_functionsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.EnterSystem_functions(s)
	}
}

func (s *System_functionsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.ExitSystem_functions(s)
	}
}

func (p *SymbolanParser) System_functions() (localctx ISystem_functionsContext) {
	localctx = NewSystem_functionsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SymbolanParserRULE_system_functions)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SymbolanParserMIN)|(1<<SymbolanParserMAX)|(1<<SymbolanParserSIN)|(1<<SymbolanParserCOS)|(1<<SymbolanParserTAN)|(1<<SymbolanParserLOG)|(1<<SymbolanParserDERIVATIVE_OPERATOR))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IRule_functionContext is an interface to support dynamic dispatch.
type IRule_functionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRule_functionContext differentiates from other interfaces.
	IsRule_functionContext()
}

type Rule_functionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRule_functionContext() *Rule_functionContext {
	var p = new(Rule_functionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SymbolanParserRULE_rule_function
	return p
}

func (*Rule_functionContext) IsRule_functionContext() {}

func NewRule_functionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Rule_functionContext {
	var p = new(Rule_functionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SymbolanParserRULE_rule_function

	return p
}

func (s *Rule_functionContext) GetParser() antlr.Parser { return s.parser }

func (s *Rule_functionContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(SymbolanParserIDENTIFIER, 0)
}

func (s *Rule_functionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Rule_functionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Rule_functionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.EnterRule_function(s)
	}
}

func (s *Rule_functionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.ExitRule_function(s)
	}
}

func (p *SymbolanParser) Rule_function() (localctx IRule_functionContext) {
	localctx = NewRule_functionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SymbolanParserRULE_rule_function)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(69)
		p.Match(SymbolanParserIDENTIFIER)
	}
	{
		p.SetState(70)
		p.Match(SymbolanParserT__0)
	}

	return localctx
}

// IExpressionRuleContext is an interface to support dynamic dispatch.
type IExpressionRuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionRuleContext differentiates from other interfaces.
	IsExpressionRuleContext()
}

type ExpressionRuleContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionRuleContext() *ExpressionRuleContext {
	var p = new(ExpressionRuleContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SymbolanParserRULE_expressionRule
	return p
}

func (*ExpressionRuleContext) IsExpressionRuleContext() {}

func NewExpressionRuleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionRuleContext {
	var p = new(ExpressionRuleContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SymbolanParserRULE_expressionRule

	return p
}

func (s *ExpressionRuleContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionRuleContext) AllExpr() []IExprContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExprContext)(nil)).Elem())
	var tst = make([]IExprContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExprContext)
		}
	}

	return tst
}

func (s *ExpressionRuleContext) Expr(i int) IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ExpressionRuleContext) Rule_function() IRule_functionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRule_functionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRule_functionContext)
}

func (s *ExpressionRuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionRuleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionRuleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.EnterExpressionRule(s)
	}
}

func (s *ExpressionRuleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.ExitExpressionRule(s)
	}
}

func (p *SymbolanParser) ExpressionRule() (localctx IExpressionRuleContext) {
	localctx = NewExpressionRuleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SymbolanParserRULE_expressionRule)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(72)
			p.expr(0)
		}
		{
			p.SetState(73)
			p.Match(SymbolanParserT__1)
		}
		{
			p.SetState(74)
			p.expr(0)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(76)
			p.expr(0)
		}
		{
			p.SetState(77)
			p.Match(SymbolanParserT__1)
		}
		{
			p.SetState(78)
			p.Rule_function()
		}

	}

	return localctx
}

// IExprContext is an interface to support dynamic dispatch.
type IExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExprContext differentiates from other interfaces.
	IsExprContext()
}

type ExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExprContext() *ExprContext {
	var p = new(ExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SymbolanParserRULE_expr
	return p
}

func (*ExprContext) IsExprContext() {}

func NewExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExprContext {
	var p = new(ExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SymbolanParserRULE_expr

	return p
}

func (s *ExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ExprContext) Left_par() ILeft_parContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILeft_parContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILeft_parContext)
}

func (s *ExprContext) AllExpr() []IExprContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExprContext)(nil)).Elem())
	var tst = make([]IExprContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExprContext)
		}
	}

	return tst
}

func (s *ExprContext) Expr(i int) IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ExprContext) Right_par() IRight_parContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRight_parContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRight_parContext)
}

func (s *ExprContext) System_functions() ISystem_functionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISystem_functionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISystem_functionsContext)
}

func (s *ExprContext) Sign() ISignContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISignContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISignContext)
}

func (s *ExprContext) Atom() IAtomContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAtomContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAtomContext)
}

func (s *ExprContext) RuleAtom() IRuleAtomContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRuleAtomContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRuleAtomContext)
}

func (s *ExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.EnterExpr(s)
	}
}

func (s *ExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SymbolanListener); ok {
		listenerT.ExitExpr(s)
	}
}

func (p *SymbolanParser) Expr() (localctx IExprContext) {
	return p.expr(0)
}
